Fix resizer row overlap, unifies resizer elements naming

--- a/src/scss/modules/table.scss
+++ b/src/scss/modules/table.scss
@@ -4,6 +4,14 @@
   align-items: flex-start;
   overflow-x: auto;
 
+  &:has(.table__resizer[data-resizer='col'].is-active) {
+    cursor: col-resize;
+  }
+
+  &:has(.table__resizer[data-resizer='row'].is-active) {
+    cursor: row-resize;
+  }
+
   &__row {
     display: flex;
   }
@@ -16,6 +24,10 @@
 
     &:empty {
       box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.5);
+    }
+
+    &:has(.table__resizer.is-active) {
+      z-index: 1;
     }
 
     .table__resizer {
